ui: light theme looks a little bit less agressive now

--- a/src/browser/svelte/lib/theme.css
+++ b/src/browser/svelte/lib/theme.css
@@ -72,7 +72,7 @@ a:hover:active {
 
 @media (prefers-color-scheme: light) {
   :root {
-    --active-background: #dddfe2;
+    --active-background: var(--light-9);
     --text: var(--dark-1);
   }
 }
