--- a/src/browser/svelte/lib/theme.css
+++ b/src/browser/svelte/lib/theme.css
@@ -45,7 +45,7 @@ button {
 }
 *:focus-visible {
   outline: none;
-  box-shadow: 0px 0px 1px 2px #247ecd5e;
+  box-shadow: 0 0 1px 2px #247ecd5e;
 }
 img {
   -webkit-user-drag: none;
